--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
+board_build.f_cpu = 240000000L
 framework = arduino
 monitor_speed = 115200
-port = COM5
+upload_port = COM5
